[project]
name = "renex"
version = "0.1.0"
description = "Backend Services for RenEx, A energy Swapping application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
